--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
-        path: /
+        path: $GITHUB_WORKSPACE
         
     - uses: papeloto/action-zip@v1
       with:
