--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,7 +23,7 @@ jobs:
         
     - uses: papeloto/action-zip@v1
       with:
-        files: dist/windows/
+        files: files/dist/windows/
         dest: video.zip
           
     - uses: actions/upload-artifact@v2
